--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.2.1",
-    "multer": "^1.4.5-lts.1",
+    "jsdom": "^22.1.0",
+    "mongoose": "^7.2.4",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6"
   }
